--- a/styles/style.css
+++ b/styles/style.css
@@ -192,15 +192,16 @@
 /*** MENU ***/
 .pasteles{
     margin-left: 10px;
-    width: 210px;
-    height: 220px;
+    width: 50%;
+    height: 230px;
     position: relative;
     border-radius: 5%;
     box-shadow: 0 0 5px #222;
     display: flex;
-    justify-content: center;
-    padding-top: 10px;
-    
+    /* justify-content: center; */
+    justify-content: space-between;
+    /* padding-top: 10px; */
+    flex-direction: row;
   }
   .menu{
     width: 80%;
@@ -210,12 +211,15 @@
     align-items: flex-end;
     flex-wrap: wrap;
     gap: 10px;
-   
   }
   .img{
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 300px;
     border-radius: 10%;
+    object-fit: contain;
+    justify-content: center;
+    align-items: center;
+    margin-top: -20px;
   }
   .txt{
     font-size: 16px;
