--- a/styles/style.css
+++ b/styles/style.css
@@ -241,3 +241,30 @@
     justify-content: center;
     
   }
+
+  /****Pokedex***/
+
+  .circulo {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    /* background: #5cb85c; */
+    border: 3px solid #555;
+    /* border-color: #222; */
+    justify-content: center;
+    align-items: center;
+}
+.tipoPokeButton{
+  padding: 1rem;
+  background-color: #F2B807;
+  padding: 15px;
+  padding-left: 5px;
+  padding-right: 10px;
+  width: 60px;
+  -moz-border-radius: 10%;
+    -webkit-border-radius: 10%;
+    border-radius: 10%;
+}
