--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,43 @@
 /***** HEADER ******/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Outfit:wght@200;400;600&display=swap&family=Be+Vietnam+Pro:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Festive&family=Syne+Tactile&display=swap');
-*{
-    margin: 0px;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Outfit:wght@200;400;600&display=swap&family=Be+Vietnam+Pro:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Festive&family=Syne+Tactile&display=swap");
+* {
+  margin: 0px;
 }
 
 :root {
-    /* Fuentes */
-    --fuente-titulo:  'Karla', sans-serif;
-    --funte-titulo-bold: 'Karla', sans-serif;
-    --fuente-principal:  'Karla', sans-serif;
+  /* Fuentes */
+  --fuente-titulo: "Karla", sans-serif;
+  --funte-titulo-bold: "Karla", sans-serif;
+  --fuente-principal: "Karla", sans-serif;
 
-    /* Tamaño */
-    --delgada: 200;
-    --regular : 400;
-    --grande: 600;
+  /* Tamaño */
+  --delgada: 200;
+  --regular: 400;
+  --grande: 600;
 
-    /* Colores */
-    --azul: #2448da;
-    --azul-fuerte: #1f3e72;
-    --celeste: #e7f3fc;
-    --gris: #697383;
-    --blanco: #ffffff;
-    --amarillo: #ffbb00;
-    
+  /* Colores */
+  --azul: #2448da;
+  --azul-fuerte: #1f3e72;
+  --celeste: #e7f3fc;
+  --gris: #697383;
+  --blanco: #ffffff;
+  --amarillo: #ffbb00;
 }
 /****Icono pokemons */
 
-.contenedor{
-    width: min(80%, 120rem);
-    margin: 0 auto;
+.contenedor {
+  width: min(80%, 120rem);
+  margin: 0 auto;
 }
 .header {
-  background: #F5DB13;/* #F2B807; */
-   /* background: linear-gradient(
+  background: #f5db13; /* #F2B807; */
+  /* background: linear-gradient(
     90deg,
     '#F5DB13'
     /* rgba(255, 255, 255, 0) 50%, */
-   /*  rgb(222, 240, 255) 55%
-  );  */ 
+  /*  rgb(222, 240, 255) 55%
+  );  */
   padding: 1rem;
 }
 
@@ -67,204 +66,301 @@
 
 /*** Fondo pantalla ***/
 
-.fondo{
-    background-color: white;
-    background:  linear-gradient(
-        90deg
-        #F5DB13 50%
-        #F2B807 50%
-    );
-    height: 300px;
+.fondo {
+  background-color: white;
+  background: linear-gradient(90deg #f5db13 50% #f2b807 50%);
+  height: 300px;
 }
-.boton-nav a{
-    background-color: #73D677;
-    padding: 1rem 2rem 1rem 2rem;
-    border-radius: .5rem;
-    color: var(--blanco);
-    box-shadow: 3px 2px 5px 0px rgba(0,0,0,0.22);
-    -webkit-box-shadow: 3px 2px 5px 0px rgba(0,0,0,0.22);
-    -moz-box-shadow: 3px 2px 5px 0px rgba(0,0,0,0.22);
+.boton-nav a {
+  background-color: #73d677;
+  padding: 1rem 2rem 1rem 2rem;
+  border-radius: 0.5rem;
+  color: var(--blanco);
+  box-shadow: 3px 2px 5px 0px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 3px 2px 5px 0px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 3px 2px 5px 0px rgba(0, 0, 0, 0.22);
 }
 
 .marTop {
-    margin-top: 4rem;
+  margin-top: 4rem;
 }
-
-
-
 
 /*==================================
                 CABECERA
 ====================================*/
 
-.cabecera{
-    position: relative;
-    display: grid;    
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-   /*  background-color:#F5DB13 ; */
-   /*  background:  linear-gradient(
+.cabecera {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  /*  background-color:#F5DB13 ; */
+  /*  background:  linear-gradient(
         90deg
         #F5DB13 50%
         #F2B807 50%
     ); */
-    
 }
-.colorFondo{
-    
-    background: linear-gradient(180deg, #F5DB13 70%, #F2B807 10%, #F3C80D 20%);
+.colorFondo {
+  background: linear-gradient(180deg, #f5db13 70%, #f2b807 10%, #f3c80d 20%);
 }
 
-.cb-1{
-        padding-left: 7rem;
-        /* background-image: url(recursos/triangulos.jpg);
-         */background-blend-mode: soft-light;
-        height: 34rem;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: left center;
-
+.cb-1 {
+  padding-left: 7rem;
+  /* background-image: url(recursos/triangulos.jpg);
+         */
+  background-blend-mode: soft-light;
+  height: 34rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left center;
 }
 
-.cb-1 h1{
-    color: black;
-    font-weight: var(--regular);
-    font-family: var(--funte-titulo-bold);
-    text-transform: initial;
-    font-size: 5rem;
-    width: 90%;
-    text-align: left;
+.cb-1 h1 {
+  color: black;
+  font-weight: var(--regular);
+  font-family: var(--funte-titulo-bold);
+  text-transform: initial;
+  font-size: 5rem;
+  width: 90%;
+  text-align: left;
 }
 
-.cb-1 p{
-    color: var(--gris);
-    font-size: 2rem;
+.cb-1 p {
+  color: var(--gris);
+  font-size: 2rem;
 }
 
-.cb-2{
-    background-image: url(../assets/logo/pikachu-modified.png);
-    background-blend-mode: soft-light;
-    height: 33rem;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+.cb-2 {
+  background-image: url(../assets/logo/pikachu-modified.png);
+  background-blend-mode: soft-light;
+  height: 33rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 /* ==============================
 =           Pokemones           =
 =================================*/
-.contenedorBarraSuperior{
-    height: 30px;
-    padding: 2rem;
-    justify-content: center;
-    align-items: center;
-   
+.contenedorBarraSuperior {
+  height: 30px;
+  padding: 2rem;
+  justify-content: center;
+  align-items: center;
 }
-.contenedorBarraSuperiorBold{
-    text-align: center;
-    font-family: var(--fuente-principal);
-    font-weight: bold;
-    font-size: 2rem;
+.contenedorBarraSuperiorBold {
+  text-align: center;
+  font-family: var(--fuente-principal);
+  font-weight: bold;
+  font-size: 2rem;
 }
-.normal{
-    text-align: center;
-    font-family: var(--fuente-principal);
-    font-size: 2rem;
+.normal {
+  text-align: center;
+  font-family: var(--fuente-principal);
+  font-size: 2rem;
 }
-.divWidth{
-    width: 100%;
-   
-    padding: 1rem;
+.divWidth {
+  width: 100%;
+
+  padding: 1rem;
 }
-.inputStyle{
-    width: 70%;
-    height: 50px;
-    border-radius: 20px;
-    padding-left: 30px;
+.inputStyle {
+  width: 70%;
+  height: 50px;
+  border-radius: 20px;
+  padding-left: 30px;
 }
-.centrar{
-    display: flex;
-    justify-content: center;
+.centrar {
+  display: flex;
+  justify-content: center;
 }
-.marginTOPPP{
-    margin-top: 10rem;
+.marginTOPPP {
+  margin-top: 10rem;
 }
 /*** MENU ***/
-.pasteles{
-    margin-left: 10px;
-    width: 50%;
-    height: 230px;
-    position: relative;
-    border-radius: 5%;
-    box-shadow: 0 0 5px #222;
-    display: flex;
-    /* justify-content: center; */
-    justify-content: space-between;
-    /* padding-top: 10px; */
-    flex-direction: row;
-  }
-  .menu{
-    width: 80%;
-    margin: 10px auto;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-  .img{
-    width: 300px;
-    height: 300px;
-    border-radius: 10%;
-    object-fit: contain;
-    justify-content: center;
-    align-items: center;
-    margin-top: -20px;
-  }
-  .txt{
-    font-size: 16px;
-    position: absolute;
-    margin-top: 160px;
-    font-weight: 700;
-  }
-  .precio{
-    font-size: 16px;
-    position: absolute;
-    margin-top: 180px;
-    font-weight: bold;
-    background-color: yellowgreen;
-    padding: 10px;
-    border-radius: 30%;
-  }
-  .btn{
-    display: flex;
-    justify-content: center;
-    
-  }
-
-  /****Pokedex***/
-
-  .circulo {
-    display: flex;
-    width: 50px;
-    height: 50px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    /* background: #5cb85c; */
-    border: 3px solid #555;
-    /* border-color: #222; */
-    justify-content: center;
-    align-items: center;
+.pasteles {
+  margin-left: 10px;
+  width: 50%;
+  min-height: 230px;
+  position: relative;
+  border-radius: 5%;
+  box-shadow: 0 0 5px #222;
+  display: flex;
+  /* justify-content: center; */
+  justify-content: space-between;
+  /* padding-top: 10px; */
+  flex-direction: row;
 }
-.tipoPokeButton{
+.menu {
+  width: 80%;
+  margin: 10px auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.img {
+  width: 300px;
+  height: 300px;
+  border-radius: 10%;
+  object-fit: contain;
+  justify-content: center;
+  align-items: center;
+  margin-top: -20px;
+}
+.txt {
+  font-size: 16px;
+  position: absolute;
+  margin-top: 160px;
+  font-weight: 700;
+}
+.precio {
+  font-size: 16px;
+  position: absolute;
+  margin-top: 180px;
+  font-weight: bold;
+  background-color: yellowgreen;
+  padding: 10px;
+  border-radius: 30%;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+}
+
+/****Pokedex***/
+
+.circulo {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  /* background: #5cb85c; */
+  border: 3px solid #555;
+  /* border-color: #222; */
+  justify-content: center;
+  align-items: center;
+}
+.tipoPokeButton {
   padding: 1rem;
-  background-color: #F2B807;
+  background-color: #f2b807;
   padding: 15px;
   padding-left: 5px;
   padding-right: 10px;
   width: 60px;
   -moz-border-radius: 10%;
-    -webkit-border-radius: 10%;
-    border-radius: 10%;
+  -webkit-border-radius: 10%;
+  border-radius: 10%;
+}
+/**** DIV CENTRADO ***/
+
+.centerDivFlex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
+.centrarTextoPokemon {
+  color: black;
+  font-weight: bold;
+  font-size: 40;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+/****** VENTANA MODAL ******/
+.modalDialog {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 99999;
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
+}
+.modalDialog:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modalDialog > div {
+  width: 80%;
+  position: relative;
+  margin: 10% auto;
+  /*padding: 5px 20px 13px 20px;*/
+  border-radius: 10px;
+  background: #fff;
+  background: -moz-linear-gradient(#fff, #999);
+  background: -webkit-linear-gradient(#fff, #999);
+  background: -o-linear-gradient(#fff, #999);
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+}
+.close {
+  background: #606061;
+  color: #ffffff;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -moz-box-shadow: 1px 1px 3px #000;
+  -webkit-box-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000;
+}
+.close:hover {
+  background: #00d9ff;
+}
+
+.alinearModalImg {
+  display: flex;
+  flex: 0.5;
+  justify-content: center;
+}
+.alinearModalData {
+  display: flex;
+  flex: 1.5;
+ /*  justify-content: center; */
+  flex-direction: column;
+}
+.colorPokemon {
+  background: #d93e30;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.centrarTextoPokemonModal {
+  color: white;
+  font-weight: bold;
+  font-size: 42;
+  text-align: center;
+  padding-top: 1rem;
+   /* background: white;  */
+  min-width: 40%;
+}
+.abilitiesModal {
+  width: 80%;
+  position: relative;
+  border-radius: 15px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 50px;
+  padding: 10px;
 }
